# jellyfin_watcher

./: .env.example  .gitignore  Agents.md  README.md  pyproject.toml
agents_history/: 2026-06-14T10-44-23_jellyfin_watcher_live_run_and_fixes.md
jellyfin_watcher/: classify.py  config.py  copy_verify.py  llm.py  lock.py  logging_setup.py  main.py  metadata.py  naming.py  notify.py  quarantine.py  reorg_bridge.py  search.py  worker.py
scripts/: jellyfin_watcher
