[project]
name = "jellyfin-watcher"
version = "0.1.0"
description = "AI-enabled folder watcher that organizes downloads into Jellyfin-compatible paths."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "ollama>=0.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 120
target-version = "py311"
